# webserver

./: .gitignore  CMakeLists.txt  README.md  config_rules.txt  post_request_example  resources.txt  todolist.txt
proving_ground/: example1  lex.yy.c  lex_test1.l  my_cgi.cpp  server.cpp  test.cpp  testcomp.sh
webserv_core/: Makefile  last_request.txt  main.cpp  todolist.txt
webserv_core/config_parser/: ConfigInfo.cpp  ConfigInfo.hpp  Config_info.cpp  Config_info.hpp  Location_info.cpp  Location_info.hpp  ServerConfig.cpp  ServerConfig.hpp  Server_info.cpp  Server_info.hpp  Utils_parse_config.cpp  Utils_parse_config.hpp
webserv_core/configs/: default copy.conf  default.conf  default2.conf  example_with_rules.conf  minimal.conf  test.conf  test_wrong.conf
webserv_core/html/: add.html  add_get.html  error404.html  form.html  index.html  my_cgi_add  post.php  show.html  show_data.py  to_redirect.html  upload.html  upload_and_show_image.html
webserv_core/proving_ground/: a.out  client.c  test_request  y.tab.h
webserv_core/resources/: defines.hpp  lex_defines.h  mime.types
webserv_core/runtime_files/: responsefile  temp for loop
webserv_core/servers/: SimpleServer.cpp  SimpleServer.hpp  TestServer.cpp  TestServer.hpp  WebServer.cpp  WebServer.hpp
webserv_core/sockets/: BindingSocket.cpp  BindingSocket.hpp  ListeningSocket.cpp  ListeningSocket.hpp  SimpleSocket.cpp  SimpleSocket.hpp
webserv_core/utils/: CGI_handler.cpp  CGI_handler.hpp  Error_response_generator.cpp  Error_response_generator.hpp  Request.cpp  Request.hpp  Request_handler.cpp  Request_handler.hpp  (+2 more)
(+37 files in other folders)
